@@ -1,6 +1,7 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ + 22Jan2016 Add instrumentation for cudaDeviceSynchronize
  - 18Jan2016 Remove extrae-post-installation.sh. It was broken.
  * 13Jan2016 Memory reference samples point to the variable (either static or
                dynamically allocated)
